# R

./: .gitignore  105-01-01-dict.txt  105-01-02-words.txt  AUTHORS  ChangeLog  ChangeLog.OLD  GNUbik  INSTALL  Makefile.am  NEWS  README  README.org  README_developer  TODO  autogen.mak  autogen.sh  config.h.in  configure.ac  description  log-messages.list  log-messages.txt
Fn/: cat-dict  guix-shell-here  topic-here  z-word  z-word-words
admin/: a
admin/Fn/: guix-shell-here
doc/: automake.mk  gendocs.sh  gendocs_template  gnubik-rubric  gnubik.6  gnubik.info  gnubik.texinfo
explore/: config  scripts  test-0.scm
explore/a/: 105-01-01-words.txt  105-01-02-dict.txt  105-01-03-dict.txt  commutators.tex  log-messages.list  perm0.dvi  perm0.tex  perm1.dvi  perm1.tex  perm2.dvi  perm2.tex  perm3.dvi  perm3.tex  perm4.dvi  perm4.tex
explore/a/Fn/: guix-shell-here  merge-this  topic-here
explore/a/guix/: manifest  shell-here-profile
explore/a/i/: in-pictures.org
explore/a/i/S+/: FRU.xcf  in-pictures.org
explore/a/i/S^+_025/: in-pictures.org  sigma^+_025-S+_4.xcf
explore/a/i/S^+_025/Fn/: grim-this
explore/a/o/: logs-0.txt
explore/a/p/: _cube2.pov  _cube3.pov  _cube4.pov  _cube5.pov  _cube6.pov  cube-1.pov  cube0.pov  cube1.pov  in-pictures.html  in-pictures.org
explore/a/p/10/: .gitignore  centres_5.pov  centres_textures_5.pov  in-pictures.html  in-pictures.org  out.txt  texture_6.pov
explore/a/p/10/Fn/: guix-shell-b2-here  povray-scenes  topic-here
explore/a/p/10/doc/: html  include  scenes
explore/a/p/11/: guix-lint.txt
explore/a/p/11/0/Fn/: _
explore/a/p/11/Fn/: topic-here
explore/a/p/6/: S_F.pov  S_F0.pov  S_F1.pov  _cube6.pov  in-pictures.html  in-pictures.org
explore/a/p/7/: S_F2.pov  cubelets_0.pov  cubelets_1.pov  cubelets_2.pov  in-pictures.html  in-pictures.org  spline_1.pov
explore/a/p/7/2-8/: spline_0.pov  spline_2.pov
explore/a/p/7/2-9/: debug.out  debug_0.pov
explore/a/p/7/Fn/: pov-mode  pov-these  povray-inclde  topic-here
explore/a/p/8/: .gitignore  centres_3.pov  corners_3.pov  cubelets_3.pov  in-pictures.html  in-pictures.org  orientation_3.pov  pov-matrix-0.pov  url-online-search.el
explore/a/p/8/Fn/: tex-slide  topic-here
explore/a/p/9/: in-pictures.html  in-pictures.org  orientation_3.pov  orientation_4.pov
explore/a/p/9/Fn/: read-logs-of-interest  topic-here
explore/a/p/Fn/: guix-shell-here  povray-include  tex-this  topic-here
explore/a/p/pov-mode/: dot-emacs.txt  emacs-pov-mode  emacs-pov-mode-build  emacs-pov-mode-profile  emacs-pov-mode-profile-here  emacs-pov-mode-profile-here.txt  keywords_identifiers.html  m05nawz48dm92dyhdaikhr4j1y4jvmyl-povray-imenu-here-3.6  pov-mode-html-dir.txt  pov-mode-include-dir.txt  povray-here  povray-here-source  povray-imenu  scenes  templates  xen-0-emacs-abc.scm
explore/a/p/pov-mode/Fn/: build-emacs-pov-mode  guix-build-imenu-here  guix-shell-emacs-pov-mode  povray-source  topic-here
explore/a/p/pov-mode/moved/: xen-0-povray-imenu.scm
explore/a/p/pov-mode/test/: #2.pov#
explore/a/p/povray-documentation/3.6/: 3.6-emacs  c44h1wazdk881gdqaz1svp7yihdb3zqg-povray-docs-here-3.6
explore/a/p/povray-documentation/3.6/Fn/: git-commit-amend-here  povray-docs  povray-ftp  povray-include  povray-scenes  topic-here
explore/a/p/povray-documentation/3.7/Fn/: povray-docs  povray-include  topic-here
explore/a/p/povray-documentation/Fn/: povray-docs  set-tty  topic-here
explore/a/p/povray-documentation/pov-mode/: nyjvp0g1bwarp7j4z2z44i7ssiwpzqgh-emacs-pov-mode-v3.3  pov-mode-v3.3  pov-mode.el
explore/b/: 0.ly  0.midi  1-not.ly
explore/b/Fn/: clone-this  guix-shell-here  playm  topic-here
icons/: automake.mk  gen-dot-desktop.scm  gnubik.desktop  logo22.xcf  logo32.xcf  logo48.xcf
po/: LINGUAS  Makefile.in  Makevars  POTFILES.in  ar.po  automake.mk  bg.po  ca.po  da.po  de.po  el.po  en_US.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gnubik.pot  he.po  hr.po  it.po  ms.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
scripts/: Makefile.am  automake.mk  debug.scm  flubrd.scm  mellor-solve.scm  rand.scm
src/: automake.mk  colour-dialog.c  colour-dialog.h  colour-sel.c  colour-sel.h  control.c  control.h  cube.c  cube.h  cube_i.h  cubeview.c  cubeview.h  cursors.c  cursors.h  dialogs.c  dialogs.h  drwBlock.c  drwBlock.h  game.c  game.h  glarea-common.c  glarea.c  glarea.h  gnubik.h  gnubik.xpm  guile-hooks.c  guile-hooks.h  main.c  menus-gtk.h  menus.c  menus.h  move-queue.c  move-queue.h  move-queue_i.h  move.c  move.h  quarternion.c  quarternion.h  select.c  select.h  (+12 more)
